@@ -67,7 +67,11 @@
         </dependency>
 
         <!--WEB SERVICES REST-->
-        
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>11.0.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -93,6 +97,7 @@
                         <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                         <option>--add-opens=javafx.base/javafx.beans.binding=ALL-UNNAMED</option>
                         <option>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option> 
+                        <option>--add-modules=javafx.swing</option> 
                     </options>
                     <mainClass>cr.ac.una.restuna.App</mainClass>
                 </configuration>
@@ -116,6 +121,7 @@
                                 <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                                 <option>--add-opens=javafx.base/javafx.beans.binding=ALL-UNNAMED</option>
                                 <option>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option>  
+                                <option>--add-modules=javafx.swing</option> 
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                             </options>
                         </configuration>
@@ -133,7 +139,7 @@
                                 <option>--add-opens=java.base/java.lang.reflect=com.jfoenix</option>
                                 <option>--add-opens=javafx.base/com.sun.javafx.beans.binding=ALL-UNNAMED</option>  
                                 <option>--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls</option> 
-
+<option>--add-modules=javafx.swing</option> 
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                             </options>
                         </configuration>
